// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto"; // <1>
import "google/api/annotations.proto";// <2>

package com.example; // <3>


option (kalix.file).value_entity = { // <4>
    name: "Counter" // <5>
    entity_type: "counter" // <6>
    state: "CounterState" // <7>
};

message IncreaseValue { // <8>
    string counter_id = 1 [(kalix.field).entity_key = true]; // <9>
    int32 value = 2;
}

message DecreaseValue {
    string counter_id = 1 [(kalix.field).entity_key = true];
    int32 value = 2;
}

message ResetValue {
    string counter_id = 1 [(kalix.field).entity_key = true];
}

message GetCounter {
    string counter_id = 1 [(kalix.field).entity_key = true];
}

message CurrentCounter { // <10>
    int32 value = 1;
}

service CounterService { // <11>
    option (kalix.service) = { // <12>
        type : SERVICE_TYPE_ENTITY
        component : ".domain.Counter"
    };

    rpc Increase(IncreaseValue) returns (google.protobuf.Empty);
    rpc Decrease(DecreaseValue) returns (google.protobuf.Empty);
    rpc Reset(ResetValue) returns (google.protobuf.Empty);
    rpc GetCurrentCounter(GetCounter) returns (CurrentCounter);
}
